--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
-    <title>Portfolio</title>
+    <title>Rachel Kenney Design</title>
     <link href="/rkportfolio/static/css/2.4c97ca4f.chunk.css" rel="stylesheet">
     <link href="/rkportfolio/static/css/main.f92a83db.chunk.css" rel="stylesheet">
 </head>
