--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/d3bce829f3.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">    
     <title>Rachel Kenney Design</title>
     <link href="/rkportfolio/static/css/2.4c97ca4f.chunk.css" rel="stylesheet">
     <link href="/rkportfolio/static/css/main.f92a83db.chunk.css" rel="stylesheet">
